--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "~1.0",
         "predis/predis": "^1.1",
         "sentry/sentry-laravel": "^0.6.1",
+        "spatie/laravel-permission": "^2.4",
         "vlucas/phpdotenv": "~2.2"
     },
     "require-dev": {
