--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "guzzlehttp/guzzle": "~6.0",
         "hacklee/umeng-notification": "^1.0",
         "illuminate/redis": "^5.4",
+        "intervention/image": "^2.4",
         "laravel/framework": "5.4.*",
         "laravel/passport": "^3.0",
         "laravel/tinker": "~1.0",
